# efs-zeropilot-3.5

./: .clang-format  .clang-tidy  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  out.txt  package.json
.github/: pull_request_template.md
.github/workflows/: compile_test.yaml  lint.yaml  test_action.yaml  unit_test.yaml
.metadata/: .log4j.xml  .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: nucleol552zeq.language.settings.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
Altimeter/Inc/: altimeter.hpp  ms5611_constants.h
Altimeter/Src/: altimeter.cpp
AttitudeManager/FlightModes/Inc/: fbwa.hpp  manual.hpp  (+2 more)
AttitudeManager/Inc/: AM.hpp  AM_DataTypes.hpp  FilteringGeneral.hpp  FilteringInterface.hpp  FreeRTOS_mock.hpp  IMUMovingAverageFilter.hpp  MovingAverage.hpp  MovingAverageFilter.hpp  PID.hpp
AttitudeManager/Src/: AM.cpp  FilteringGeneral.cpp  FilteringInterface.cpp  IMUMovingAverageFilter.cpp  MovingAverage.cpp  MovingAverageFilter.cpp  PID.cpp  imu.cpp
AttitudeManager/Tests/: AMTest.cpp  AM_test.cpp  ExampleTest.cpp  FreeRTOS_mock.cpp  ManualControlTest.cpp  PIDTest.cpp
Boardfiles/discoveryl562qe/: discoveryl562qe.cmake  discoveryl562qe.ioc
Boardfiles/new-boardfile/: STM32L562EDK_FLASH.ld
Boardfiles/nucleof401re/: .project  nucleofl552zeq.launch
Boardfiles/nucleol552zeq/: .cproject  .mxproject  .project  LaminarOS_nL552ZEQ.ioc  STM32L552ZETXQ_FLASH.ld  STM32L552ZETXQ_RAM.ld  nucleol552zeq Debug (1).cfg  nucleol552zeq Debug (1).launch  nucleol552zeq.cmake  nucleol552zeq.ioc
Boardfiles/zeropilot-3/: .cproject  .mxproject  .project  STM32L562ZETXQ_FLASH.ld  STM32L562ZETXQ_RAM.ld  zeropilot-3.cfg  zeropilot-3.cmake  zeropilot-3.ioc
Boardfiles/zeropilot-3-0/: .cproject  .mxproject  .project  STM32L562ZETXQ_FLASH.ld  STM32L562ZETXQ_RAM.ld  zeropilot-3-0.cmake  zeropilot-3-0.ioc
Boardfiles/zeropilotl562ze/: .cproject  .mxproject  .project  STM32L562ZETXQ_FLASH.ld  zeropilotl562ze.cmake  zeropilotl562ze.ioc
Common/Inc/: CommonDataTypes.hpp  constrain.h
Config_Models/: config_foundation.hpp  temp_drivers.hpp
Config_Models/example_model/: config.hpp  model.hpp
Drivers/Tests/: CircularBufferTest.cpp  HelloWorldTest.cpp
Drivers/common/: drivers_callbacks.cpp
Models/: config_foundation.hpp  global_config.hpp  temp_drivers.hpp
Models/example_model/: config.hpp
Models/testmodel1/: config.cpp  config.hpp
Models/unit_testing/: config.hpp  config_default.cpp
Models_blah/: config_foundation.hpp
Models_blah/example_model/: config.hpp
PathManager/Inc/: PM.hpp  PM_CruisingStateManager.hpp  PM_DataTypes.hpp  PM_Interface.h  PM_LandingTakeoffManager.hpp  PM_StateManager.hpp  PM_States.hpp  PM_Waypoint.hpp
PathManager/Src/: PM.cpp  PM_CruisingStateManager.cpp  PM_Interface.cpp  PM_LandingTakeoffManager.cpp  PM_States.cpp  PM_Waypoint.cpp
PathManager/tests/: CruisingStateManagerTest.cpp  ExampleTest.cpp  TakeOffLandingTest.cpp  WaypointTest.cpp
SystemManager/: SystemManager.cpp  SystemManager.hpp
SystemManager/Inc/: SystemManager.hpp
SystemManager/Src/: SystemManager.cpp
TelemetryManager/: temp.txt
TelemetryManager/Inc/: BasicMavlinkEncoder.h  CircularBuffer.hpp  GroundStationComms.hpp  GroundStationCommunication.hpp  MavlinkDecoder.h  MavlinkDecoder.hpp  MavlinkEncoder.h  MavlinkEncoder.hpp  MavlinkTranslator.hpp  TM.hpp  TMCircularBuffer.hpp  TelemetryManager.hpp  TelemetryTask.hpp  TimerInterrupt.hpp  imcoming_data.h  incoming_data.h  mavlink_decoder.h  mavlink_decoder.hpp  mavlink_encoder.h  mavlink_encoder.hpp
TelemetryManager/IsolatedBuild/: CMakeLists.txt
TelemetryManager/Src/: BasicMavlinkEncoder.cpp  CircularBuffer.cpp  GroundStationComms.cpp  GroundStationCommunication.cpp  MavlinkDecoder.cpp  MavlinkEncoder.cpp  MavlinkTranslator.cpp  TM.cpp  TMCircularBuffer.cpp  TelemetryManager.cpp  TelemetryTask.cpp  TimerInterrupt.cpp  mavlink_decoder.cpp  mavlink_encoder.cpp
TelemetryManager/Tests/: GenericTest.cpp  MavlinkTranslatorTest.cpp  TMCircularBufferTest.cpp  generic_test.cpp  main.cpp
TelemetryManager/Transmit/: CMakeLists.txt  main.cpp
TelemetryManager/Transmit/tst/: CMakeLists.txt  test1.cpp
TelemetryManager/Transmit/tst/lib/googletest-main/: CMakeLists.txt
TelemetryManager/Transmit/tst/lib/googletest-main/googlemock/: CMakeLists.txt
TelemetryManager/Transmit/tst/lib/googletest-main/googletest/: CMakeLists.txt
TelemetryManager/Transmit/tst/lib/googletest-main/googletest/include/gtest/: gtest-assertion-result.h
Testing/: CMakeLists.txt  test.bash
Testing/Inc/: usart.h
Testing/Mocks/Inc/: MockChannel.hpp  MockFlightmode.hpp
Testing/Mocks/Src/: MockChannel.cpp
Testing/Stubs/Inc/: FreeRTOS.h  ZP_D_MotorChannel.hpp  ZP_D_PWMChannel.hpp  main.h  semphr.h  tim.h
Testing/Stubs/Src/: ZP_D_PWMChannel.cpp  main.c  main.cpp  semphr.cpp
Tools/: Dockerfile  build.bash  clang-format.bash  clang-tidy.bash  clang-tidy_ignore.txt  config.txt  cppcheck.bash  default_config.txt  run-clang-tidy.bash  run_docker.bash  run_docker.ps1  static_analysis_files.bash  static_analysis_ignore.txt  static_analysis_src_files.bash  tools.bash  tools.bat  tools.ps1
Tools/Firmware/: CMakeLists.txt
Tools/HelperScripts/: build.bash  clang-format.bash  clang-tidy.bash  cppcheck.bash  static_analysis_files.bash  test.bash
Tools/Production/: CMakeLists.txt
Tools/Testing/: CMakeLists.txt
Tools/scripts/: build.bash  clang-tidy.bash  cppcheck.bash  test.bash
tools/: Dockerfile  default_config.txt  run_docker.bash  run_docker.ps1
tools/configs/: compile_config.txt  lint_config.txt  static_analysis_ignore.txt  test_config.txt
tools/firmware/: CMakeLists.txt
tools/scripts/: build.bash  clang-format.bash  clang-tidy.bash  cppcheck.bash  read_configs.bash  static_analysis_files.bash  test.bash
tools/testing/: CMakeLists.txt
xpacks/.bin/: busybox  busybox.cmd  busybox.ps1  cp  cp.cmd  cp.ps1  echo  echo.cmd  echo.ps1  make  make.cmd  make.ps1  mkdir  mkdir.cmd  mkdir.ps1  rm  rm.cmd  rm.ps1  sh  sh.cmd  sh.ps1
(+280 files in other folders)
